--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev -p 5000",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start -p 5000",
     "check": "tsc",
     "db:push": "drizzle-kit push"
